<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Cloud Emoticon</string>
    <string name="settings">Settings</string>
    <string name="exit">Exit</string>
    <string name="copied">Copied to clipboard</string>
    <string name="bad_conn">Bad connection, please retry</string>
    <string name="fail">Something went wrong, please try again</string>
    <string name="empty" translatable="false">╮(￣▽￣&quot;)╭</string>
    <string name="touch_to_launch">Touch to launch</string>
    <string name="title_activity_settings">Settings</string>
    <string name="pref_section_in_app_behaviors">In-app behaviors</string>
    <string name="close_after_copy">Close app after copy</string>
    <string name="repo_url">Repository URL</string>
    <string name="about">About</string>
    <string name="github_repo">GitHub repository</string>
    <string name="github_release">GitHub release</string>
    <string name="version">Version</string>
    <string name="fav">Bookmarks</string>
    <string name="add_to_fav">Add to bookmarks</string>
    <string name="added_to_fav">Added to bookmarks</string>
    <string name="removed_from_fav">Removed from bookmarks</string>
    <string name="notification_visibility">Quick trigger notification visibility</string>
    <string name="show_after_boot_up">Show it after boot-up</string>
    <string name="emoticon">Emoticon</string>
    <string name="description">Description</string>
    <string name="edit_repository">Edit Repository</string>
    <string name="version_code">Version code</string>
    <string name="no_repo_prompt">You don\'t have any repository</string>
    <string name="repo_manager">Repository Manager</string>
    <string name="add_repo">Add repository</string>
    <string name="alias">Alias</string>
    <string name="invalid_repo_format">Invalid repository format</string>
    <string name="history">History</string>
    <string name="downloading">Downloading</string>
    <string name="downloaded">Downloaded</string>
    <string name="duplicate_url">Duplicate URL</string>
    <string name="duplicate_emoticon">Duplicate emoticon</string>
    <string name="navbar_gesture_title">Navigation bar gesture</string>
    <string name="navbar_gesture_summary">Swipe-up from the navigation bar to start</string>
    <string name="now_on_tap_title">Set up as digital assistant app</string>
    <string name="no_favorite_prompt">You don\'t have any bookmarks</string>
    <string name="no_history_prompt">You don\'t have any history</string>
    <string name="edit_favorite">Edit Bookmark</string>
    <string name="backup_and_restore">Backup and restore</string>
    <string name="backup_favorites">Backup bookmarks</string>
    <string name="restore_favorites">Restore bookmarks</string>
    <string name="empty_emoticon">Empty emoticon</string>
    <string name="repository_store">Repository Store</string>
    <string name="old_favorites_merged">Old bookmarks merged</string>
    <string name="update_checker">Check for update</string>
    <string name="update_checker_failed">Failed to check for update</string>
    <string name="already_latest_version">Already latest version</string>
    <string name="new_version_available">New version is available! (%d)</string>
    <string name="go_to_play_store">Go to Play Store</string>
    <string name="search_result_not_found">Result not found</string>

    <string-array name="notification_legacy_visibility_options">
        <item>Don\'t show</item>
        <item>Only in notification panel</item>
        <item>Both in notification panel and status bar</item>
    </string-array>
    <string name="personal_dict">Personal dictionary</string>
    <string name="import_into_personal_dict">Import all bookmarks into personal dictionary</string>
    <string name="imported_into_personal_dict">Imported %d bookmarks into personal dictionary</string>
    <string name="no_description">No description</string>
    <string name="no_shortcut">No shortcut</string>
    <string name="shortcut">Shortcut</string>
    <string name="please_wait">Please wait&#8230;</string>
    <string name="added_to_repo">Added to repositories</string>
    <string name="allow">Allow</string>
    <string name="deny">Deny</string>
    <string name="backed_up_favorites">Backed up bookmarks</string>
    <string name="restored_favorites">Restored bookmarks</string>
    <string name="notification">Notification</string>
    <string name="cool_kid">Hey running debug/beta versions, cool kid?</string>
    <string name="loading_repository_store">Loading repository store…</string>
    <string name="repository_store_contribution_prompt">Want to contribute?</string>
    <string name="repository_store_contribution_warning">It is assumed that you have some minimal knowledge on GitHub, JSON and programming. Do you still want to proceed?</string>
    <string name="proceed">Proceed</string>
    <string name="quick_trigger_notification_channel_name">Quick trigger</string>
    <string name="quick_trigger_notification_channel_description">Quickly trigger the app from notification panel</string>
    <string name="ime_label">Cloud Emoticon IME</string>
    <string name="ime_no_favorite">No bookmark</string>
    <string name="revoke_from_personal_dict">Revoke all bookmarks from personal dictionary</string>
    <string name="revoked_from_personal_dict">Revoked %d bookmarks from personal dictionary</string>
    <string name="notification_rationale">We need to put a sticky \"quick trigger\" notification so that you can launch Cloud Emoticon conveniently.</string>
    <string name="exported_repo">Repo exported</string>
    <string name="show_notification">Show quick trigger notification</string>
    <string name="accessibility_service_description">Quickly enter emoticons by their shortcut</string>
    <string name="pref_section_quick_trigger_notification">Quick trigger notification</string>
    <string name="pref_section_digital_assistant_app">Digital assistant app</string>
    <string name="now_on_tap_summary">After setting this app as the default digital assistant app, you can hold the home button to open it</string>
    <string name="pref_section_quick_enter">Quick enter %1$s</string>
    <string name="pref_set_up_accessibility_title">Set up quick enter</string>
    <string name="pref_set_up_accessibility_summary">Enter shortcut to quickly enter emoticons</string>
    <string name="pref_set_up_accessibility_enabled_title">Disable quick enter</string>
    <string name="pref_set_up_accessibility_enabled_summary">Quick enter is enabled</string>
    <string name="pref_privacy_policy_title">Privacy policy</string>
    <string name="quick_enter_before_enabling_prompt_title">Before enabling quick enter…</string>
    <string name="quick_enter_before_enabling_prompt_summary">Cloud Emoitcon will process all texts you enter on this device in order for quick enter to work, even when the app is closed. You may disable this feature at any time and text processing will stop immediately.</string>
    <string name="pref_quick_enter_help_title">What is this?</string>
    <string name="quick_enter_before_enabling_consent_button">I agree</string>
</resources>