<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content">

    <PreferenceCategory
        android:key="pref_behaviors"
        android:title="@string/behaviors">
        <ListPreference
            android:defaultValue="both"
            android:entries="@array/notification_options"
            android:entryValues="@array/notification_options_alias"
            android:key="pref_notification_visibility"
            android:title="@string/notification_visibility" />
        <CheckBoxPreference
            android:defaultValue="true"
            android:key="pref_close_after_copy"
            android:title="@string/close_after_copy" />
        <CheckBoxPreference
            android:defaultValue="true"
            android:key="pref_show_after_boot_up"
            android:title="@string/show_after_boot_up" />
        <CheckBoxPreference
            android:defaultValue="false"
            android:key="pref_navbar_gesture"
            android:summary="@string/navbar_gesture_summary"
            android:title="@string/navbar_gesture_title" />
    </PreferenceCategory>

    <PreferenceCategory
        android:key="pref_ime"
        android:title="@string/ime">
        <Preference
            android:key="pref_import_into_ime"
            android:title="@string/import_into_ime"
            android:summary="@string/import_into_ime_summary" />
        <!--
        <Preference
            android:key="pref_revoke_from_ime"
            android:title="@string/revoke_from_ime" />
        -->
    </PreferenceCategory>

    <PreferenceCategory
        android:key="pref_backup_restore"
        android:title="@string/backup_and_restore">
        <Preference
            android:key="pref_backup_fav"
            android:title="@string/backup_favorites" />
        <Preference
            android:key="pref_restore_fav"
            android:title="@string/restore_favorites" />
    </PreferenceCategory>

    <PreferenceCategory
        android:key="pref_about"
        android:title="@string/about">
        <Preference
            android:key="pref_git_hub_release"
            android:title="@string/github_release" />
        <Preference
            android:key="pref_git_hub_repo"
            android:title="@string/github_repo" />
        <Preference android:key="pref_version" />
    </PreferenceCategory>

</PreferenceScreen>